--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+# Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/roomtypedb?createDatabaseIfNotExist=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# DataSource settings
+spring.datasource.url=jdbc:mysql://localhost:3306/roomdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
-server.servlet.context-path=/room-type
+
+#cors.allowed-origins=http://localhost:3315
+
+# Server port (Uncomment this if you want to run your Spring Boot application on a custom port)
+server.port=8080
