--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # DataSource settings
 spring.datasource.url=jdbc:mysql://localhost:3306/roomdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=#Mama2222
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #cors.allowed-origins=http://localhost:3315
